@@ -16,7 +16,6 @@ setAs("dgRMatrix", "matrix.csr",
       })
 
 
-
 setAs("matrix.csc", "dgCMatrix",
       function(from) {
 	  new("dgCMatrix",
@@ -25,9 +24,9 @@ setAs("matrix.csc", "dgCMatrix",
       })
 setAs( "dgCMatrix", "matrix.csc",
       function(from) {
-	  new("dgCMatrix",
+	  new("matrix.csc",
 	      ra = from@x, ja = from@i + 1:1, ia = from@p + 1:1,
-	      Dim = from@dimension)
+	      dimension = from@Dim)
       })
 
 setAs("matrix.coo", "dgTMatrix",
@@ -38,9 +37,9 @@ setAs("matrix.coo", "dgTMatrix",
       })
 setAs("dgTMatrix", "matrix.coo",
       function(from) {
-	  new("dgTMatrix",
+	  new("matrix.coo",
 	      ra = from@x, ia = from@i + 1:1, ja = from@j + 1:1,
-	      Dim = from@dimension)
+	      dimension = from@Dim)
       })
 
 ### II.  Enable coercion to the ``favorite'' of each package;
@@ -48,7 +47,7 @@ setAs("dgTMatrix", "matrix.coo",
 ###      i.e.,  "dgCMatrix" and  "matrix.csr"
 
 setAs("dsparseMatrix", "matrix.csr",
-      function(from) as(as(from, "dgRMatrix"), "matrix.csr"))
+      function(from) as(as(as(from, "RsparseMatrix"), "dgRMatrix"), "matrix.csr"))
 
 ##
 setAs("matrix.csr", "dgCMatrix",
@@ -56,10 +55,29 @@ setAs("matrix.csr", "dgCMatrix",
 setAs("matrix.coo", "dgCMatrix",
       function(from) as(as(from, "dgTMatrix"), "dgCMatrix"))
 
+### also define the virtual coercions that we (should) advertize:
+setAs("matrix.csr", "RsparseMatrix", function(from) as(from, "dgRMatrix"))
+setAs("matrix.csc", "CsparseMatrix", function(from) as(from, "dgCMatrix"))
+setAs("matrix.coo", "TsparseMatrix", function(from) as(from, "dgTMatrix"))
+## to "Csparse*" and "Tsparse*" should work for all sparse:
+setAs("matrix.csr", "CsparseMatrix",
+      function(from) as(as(from, "dgRMatrix"), "CsparseMatrix"))
+setAs("matrix.coo", "CsparseMatrix",
+      function(from) as(as(from, "dgTMatrix"), "CsparseMatrix"))
+setAs("matrix.csc", "TsparseMatrix",
+      function(from) as(as(from, "dgCMatrix"), "TsparseMatrix"))
+setAs("matrix.csr", "TsparseMatrix",
+      function(from) as(as(from, "dgRMatrix"), "TsparseMatrix"))
+## Also *from* (our favorite) Csparse should work to all 3 SparseM
+setAs("CsparseMatrix", "matrix.csr",
+      function(from) as(as(from, "RsparseMatrix"), "matrix.csr"))
+setAs("CsparseMatrix", "matrix.coo",
+      function(from) as(as(from, "TsparseMatrix"), "matrix.coo"))
+setAs("CsparseMatrix", "matrix.csc",
+      function(from) as(as(from, "dgCMatrix"), "TsparseMatrix"))
+
 ## Easy coercion: just always use as( <SparseM.mat>, "Matrix") :
 
-setAs("matrix.csr", "Matrix", function(from) as(from, "dgCMatrix")) # we favor 'dgC' so much ..
-setAs("matrix.coo", "Matrix", function(from) as(from, "dgTMatrix"))
-setAs("matrix.csc", "Matrix", function(from) as(from, "dgCMatrix"))
-
-
+setAs("matrix.csr", "Matrix", function(from) as(from, "CsparseMatrix")) # we favor!
+setAs("matrix.coo", "Matrix", function(from) as(from, "TsparseMatrix"))
+setAs("matrix.csc", "Matrix", function(from) as(from, "CsparseMatrix"))
