@@ -2,14 +2,24 @@
 \docType{methods}
 \alias{SparseM-coerce-methods}
 %
-\alias{coerce,matrix.csr,dgRMatrix-method}
-\alias{coerce,matrix.csc,dgCMatrix-method}
-\alias{coerce,matrix.coo,dgTMatrix-method}
+\alias{coerce,matrix.coo,CsparseMatrix-method}
+\alias{coerce,matrix.coo,TsparseMatrix-method}
+\alias{coerce,matrix.csc,CsparseMatrix-method}
+\alias{coerce,matrix.csc,TsparseMatrix-method}
+\alias{coerce,matrix.csr,CsparseMatrix-method}
+\alias{coerce,matrix.csr,RsparseMatrix-method}
+\alias{coerce,matrix.csr,TsparseMatrix-method}
+%
+\alias{coerce,CsparseMatrix,matrix.csr-method}
+\alias{coerce,CsparseMatrix,matrix.coo-method}
+\alias{coerce,CsparseMatrix,matrix.csc-method}
+\alias{coerce,dsparseMatrix,matrix.csr-method}
 \alias{coerce,dgRMatrix,matrix.csr-method}
 \alias{coerce,dgCMatrix,matrix.csc-method}
 \alias{coerce,dgTMatrix,matrix.coo-method}
-%
-\alias{coerce,dsparseMatrix,matrix.csr-method}
+\alias{coerce,matrix.csr,dgRMatrix-method}
+\alias{coerce,matrix.csc,dgCMatrix-method}
+\alias{coerce,matrix.coo,dgTMatrix-method}
 \alias{coerce,matrix.csr,dgCMatrix-method}
 \alias{coerce,matrix.coo,dgCMatrix-method}
 %
