@@ -1,3 +1,8 @@
+2007-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/SparseM-conv.R: more conversion, notably for triplet matrices.
+
+
 2007-02-03  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.9975-10 to upload
